recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: reassignment to val
angle=90
     ^Spiral:6: error: reassignment to val
length=0
      ^Spiral:7: error: reassignment to val
increment=3
         ^Spiral:8: error: reassignment to val
steps=20
     ^Spiral:14: error: missing arguments for method spiral in class Spiral;
follow this method with `_' if you want to treat it as a partially applied function
	spiral(steps, angle, length, increment)=spiral(steps-1, angle, length+3, increment)
        ^